2014-08-08  Jérôme Pasquier  <rainbru@free.fr>

	* src/Logger.cpp (parse_program_options): several try for the
	program options chaining failed.

	* configure.ac: renamed and some modifications to make autoconf 2.69
	happy.

2014-07-31  Jérôme Pasquier  <rainbru@free.fr>
	* src/tools/main_window.rb (feed_cbSources): feed source files combo.
	* src/tools/log_reader.rb (open_file): now creates an abstract object.

	* src/tools/log_reader.rb (parse_logfile_v1_psych): correctly
	flatten the message arrah of hashes.
	* src/tools/log_reader.rb (get_psych_node_content): now works
	for program details.
	* src/tools/log_reader.rb (open_file): now uses Psych.load_file.
	* src/tools/log_reader.rb (open_file): get 'logfile-version' value
	the Psych way.

2012-05-09  Jérôme Pasquier  <rainbru@free.fr>

	* src/examples/logger-test.cpp (main): uses new customizable values.

	* src/LoggerOutputYaml.cpp (LoggerOutputYaml): add a parameter to set
	logfile filename.

	* src/LoggerOutputFile.cpp (LoggerOutputFile): add a parameter to set
	logfile filename.

	* src/Logger.cpp (init): add some parameters to let user customize
	logger's application name and version and log filename.

2012-05-01  Jérôme Pasquier  <rainbru@free.fr>

	* rainbrurpg-logger.texinfo: now really rainbrurpg-logger related.
	Was an autoproject skeleton.

	* src/Logger.cpp (init): handle '?' shortcut for help and 'V' for
	version as command line options.

2012-05-01  Jérôme Pasquier  <rainbru@free.fr>

	* src/tools/log_reader.rb: fix a bug preventing main window to appear.

	* src/LoggerOutputYaml.cpp: many output functinos now use the
	escape macro.
	* src/LoggerOutputYaml.cpp (_e): created a simple shortcut macro to
	Rpg::LoggerOutputYaml::escape().

2012-04-30  Jérôme Pasquier  <rainbru@free.fr>

	* src/LoggerOutputYaml.cpp: uses ObjectInspector accessors.
	* src/LoggerOutputTty.cpp: uses ObjectInspector accessors.
	* src/ObjectInspector.hpp: make all members private, accessed through
	accessors.
