@@ -1,4 +1,4 @@
-crainbrurpg-client - ??? - The NewProjectLayout's client.
+rainbrurpg-client - ??? - The NewProjectLayout's client.
 
 * see ROADMAP file
 
