@@ -94,7 +94,7 @@
             <x>0</x>
             <y>0</y>
             <width>274</width>
-            <height>332</height>
+            <height>300</height>
            </rect>
           </property>
           <attribute name="label">
@@ -182,7 +182,7 @@
             <x>0</x>
             <y>0</y>
             <width>274</width>
-            <height>332</height>
+            <height>300</height>
            </rect>
           </property>
           <attribute name="label">
@@ -259,12 +259,12 @@
           <string>&amp;Log level</string>
          </property>
          <property name="buddy">
-          <cstring>comboBox</cstring>
+          <cstring>cbLogLevels</cstring>
          </property>
         </widget>
        </item>
        <item row="0" column="1">
-        <widget class="QComboBox" name="comboBox">
+        <widget class="QComboBox" name="cbLogLevels">
          <item>
           <property name="text">
            <string>Debug</string>
@@ -287,7 +287,7 @@
          </item>
         </widget>
        </item>
-       <item row="1" column="0">
+       <item row="2" column="0">
         <widget class="QLabel" name="label_2">
          <property name="text">
           <string>&amp;Source file</string>
@@ -297,7 +297,7 @@
          </property>
         </widget>
        </item>
-       <item row="1" column="1">
+       <item row="2" column="1">
         <widget class="QComboBox" name="cbSourcesFiles">
          <item>
           <property name="text">
@@ -305,6 +305,16 @@
           </property>
          </item>
         </widget>
+       </item>
+       <item row="1" column="0">
+        <widget class="QLabel" name="label_3">
+         <property name="text">
+          <string>Domain</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QComboBox" name="cbDomains"/>
        </item>
       </layout>
      </item>
